[tool.poetry]
name = "in8"
version = "0.1.0"
description = ""
authors = ["muriloeduardo199 <muriloeduardo1993@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scrapy = "^2.7.1"
flask = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
